# report-from-csv

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
.github/workflows/: build.yml
report_from_csv/reports/: average_gdp.py
report_from_csv/scripts/: main.py  parse_files.py
tests/: test_report.py
tests/test_data/: expected.txt
